# Cymbiont

./: .cursorignore (conflicted copy 2024-11-13 095841)  .gitignore  LICENSE  README.md  api_queue.py  bootstrap.sh  config.example.toml  config.toml  cymbiont.py  debug_cuda.sh  documents.py  fort_python_log.txt  logging_config.py  main.py  prompts.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  shared_resources.py  shell.nix  test_hipporag.sh  triple_extraction.py  utils.py
HippoRAG/: .gitignore
scripts/: setup_restricted_user.sh
src/: agent_tools.py  api_conversions.py  api_queue.py  chat_agent.py  chat_history.py  constants.py  custom_dataclasses.py  cymbiont_shell.py  documents.py  logging_config.py  main.py  model_configuration.py  process_log.py  prompt_helpers.py  prompts.py  shared_resources.py  system_message_parts.py  system_prompt_parts.py  tag_extraction.py  text_parser.py  tool_schemas.py  triple_extraction.py  utils.py
src/agents/: agent.py  agent_tools.py  agent_types.py  bash_executor.py  chat_agent.py  chat_history.py  notetaking.py  prompt_defaults.py  taskpad.py  tool_agent.py  tool_helpers.py  tool_schemas.py
src/cymbiont_logger/: bash_logger.py  logger_types.py  logging_config.py  process_log.py
tests/: __init__.py  __main__.py  manual_test_api_queue.py  test_agent_tools.py  test_api_queue.py  test_bash_executor.py  test_chat_history.py  test_document_processing.py  test_keyword_router.py  test_llama_inference.py  test_llama_inference_2.py  test_logger.py  test_parsing.py  test_progressive_summarization.py
(+24 files in other folders)
