[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.pylsp-mypy]
enabled = true
strict = true
python_path = ["src"]

# VSCode Python settings
[tool.vscode]
python.analysis.extraPaths = ["src"]

# Many IDEs and linters will recognize this
[tool.poetry]
name = "cymbiont"
version = "0.1.0"
packages = [
    { include = "src" },
    { include = "tests" }
]